--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@
     flex-direction: column;
 }
 
-
-
 #email {
     color: pink;
     margin: 20px;
@@ -30,7 +28,7 @@
 
 #password {
     margin: 20px;
-    border-bottom: 5px dotted rgb(164, 119, 206, 0.5 );
+    border-bottom: 5px dotted rgb(164, 119, 206, 0.5);
 }
 
 .transparent {
@@ -39,8 +37,12 @@
     background: rgba(0, 0, 0, 0);
 }
 
+.transparent:focus {
+    font-weight: 900;
+}
+
 .button {
-margin-left: 37%;
+    margin-left: 37%;
     border: 2px dashed rgba(209, 181, 236, 0.5);
     padding: 8px;
 }
@@ -49,3 +51,4 @@ h2 {
     margin-top: 200px;
     color: #8E656F;
 }
+
