--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
 }
 
 #email {
@@ -37,9 +38,11 @@
     background: rgba(0, 0, 0, 0);
 }
 
-.transparent:focus {
-    font-weight: 900;
+input::placeholder {
+    font-weight: bold;
 }
+
+
 
 .button {
     margin-left: 37%;
